Added Bootstrap dependencies

--- a/taskrail_client/package.json
+++ b/taskrail_client/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-flow-renderer": "^8.8.0",
     "react-redux": "^7.2.2",
