--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "react": "^17.0.1",
     "react-flow-renderer": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.3",
+    "@types/react-redux": "^7.1.16"
   }
 }
