--- a/taskrail_client/package.json
+++ b/taskrail_client/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "immer": "^8.0.1",
     "react": "^17.0.1",
