--- a/taskrail_client/package.json
+++ b/taskrail_client/package.json
@@ -51,6 +51,8 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/redux-logger": "^3.0.8"
+    "@types/redux-logger": "^3.0.8",
+    "react-google-login": "^5.2.2",
+    "universal-cookie": "^4.0.4"
   }
 }
