--- a/taskrail_client/package.json
+++ b/taskrail_client/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!taskrail-client)/\" --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -56,7 +56,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/redux-logger": "^3.0.8",
+    "babel-jest": "^26.6.3",
     "react-google-login": "^5.2.2",
+    "redux-mock-store": "^1.5.4",
+    "ts-jest": "^26.5.5",
     "universal-cookie": "^4.0.4"
   }
 }
