--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/redux-logger": "^3.0.8",
+    "@types/redux-mock-store": "^1.0.2",
     "babel-jest": "^26.6.3",
     "react-google-login": "^5.2.2",
     "redux-mock-store": "^1.5.4",
