--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "google-auth-library": "^7.0.4",
-        "mongodb": "^3.6.5"
+        "mongodb": "^3.6.5",
+        "redux-mock-store": "^1.5.4"
     },
     "devDependencies": {
         "@types/node": "^14.14.37",
