--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start:production": "node -r dotenv/config index.js dotenv_config_path=./.env.production",
-        "start:dev": "node -r dotenv/config index.js dotenv_config_path=./.env.development",
+        "start:dev": "nodemon -r dotenv/config index.js dotenv_config_path=./.env.development",
         "start:test": "node -r dotenv/config index.js dotenv_config_path=./.env.test"
     },
     "author": "",
